--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+1.0.6.0 -- 2023-06-06
+- Added more panels in depth for better resizing adjustment
+- Increaed the font from 
+
 1.0.5.2 -- 2022-11-06
 - Set column width to autosize for data content.
 
