--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+1.0.6.1 -- 2023-07-10
+- Fixed closing behavior
+- Better, more helpful display when adding new category via filter text box.
+
 1.0.6.0 -- 2023-06-06
 - Added more panels in depth for better resizing adjustment
 - Increaed the font from 
