--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+1.0.6.4 -- 2024-03-01
+- Adjust headers again.
+
 1.0.6.3 -- 2024-02-26
 - Adjust Jive headers to Cleared: reaction to CCB import and export change.
 
