--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,12 @@
+1.0.9.0 -- 2024-07-15
+** Bug fix: Ensure filter results list is enabled when the filter text is being used.
+** Change Edit an import file to be a combo-box select, or add.
+** Text re-singing.
+
+1.0.8.0 -- 2024-06-05
+- support for ctrl+mouse wheel font sizing.
+- better flexibility for column management.
+
 1.0.7.1 -- 2024-05-25
 - headers un-fixed (Cleared Status back to Jived)
 
