--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+1.0.10.0 -- 2025-10-26
+- Change splitter between transactions and category panels to non-fixed.
+- Treat "Yes" (case-sensitive) as true, and all else as false for cleared column.
+- Nuget package updates.
+- .NET Core 3.1 to .NET 8
+
 1.0.9.0 -- 2025-05-04
 - Bug fix: Ensure filter results list is enabled when the filter text is being used.
 - Add Summary form to show total amount imported from each category (multii-select rows for filtering).
