--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
+1.0.13.0 -- 2026-01-25
+- Fix cleared column name to "Jived" for import file and "Cleared" for CCB export file. Fixes import column automap.
+
 1.0.12.0 -- 2026-01-15
-- Fix cleared column name to "Cleared Status" for import file and "Cleared" for CCB export file.  Fixes import column automap.
+- Fix cleared column name to "Cleared Status" for import file and "Cleared" for CCB export file. Fixes import column automap.
 
 1.0.11.0 -- 2026-01-15
 - Change Google search string to "Credit Card Charge from "{payee}" ... which provides 
